[gd_scene load_steps=10 format=3 uid="uid://dv3rb3ebhtase"]

[ext_resource type="PackedScene" uid="uid://cd02euysm8rbg" path="res://Scenes/player.tscn" id="1_1rerr"]
[ext_resource type="Script" uid="uid://chaftbf06aec5" path="res://Scripts/menu.gd" id="1_xhh6f"]
[ext_resource type="PackedScene" uid="uid://c601o4igexja" path="res://Scenes/door.tscn" id="3_cayip"]
[ext_resource type="PackedScene" uid="uid://rmmo7ben6qqy" path="res://Scenes/flicker_light.tscn" id="4_158mb"]

[sub_resource type="Animation" id="Animation_158mb"]
resource_name = "Light_flicker"
length = 1.3

[sub_resource type="Animation" id="Animation_xhh6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.73164, 1.82674, 2.1042)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.41202, 0)]
}

[sub_resource type="Animation" id="Animation_1rerr"]
resource_name = "fade_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Panel:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cayip"]
resource_name = "start_game"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.49952, 1.96667, 2.48455),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.2427, 1.82674, 2.1042), Vector3(-0.292291, 1.82674, 2.1042), Vector3(-1.27713, 1.82674, 0.377723), Vector3(-0.292291, 1.82674, -1.23689), Vector3(-0.292291, 1.82674, -2.71594)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.13333, 1.7693, 2.48455),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.87626, 0), Vector3(0, -2.81324, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhh6f"]
_data = {
&"Light_flicker": SubResource("Animation_158mb"),
&"RESET": SubResource("Animation_xhh6f"),
&"fade_menu": SubResource("Animation_1rerr"),
&"start_game": SubResource("Animation_cayip")
}

[node name="Menu" type="Node3D"]
script = ExtResource("1_xhh6f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 406.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -173.0
offset_top = 90.0
offset_right = 174.0
offset_bottom = -425.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Work In Progress 
Title"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -78.0
offset_right = 56.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play_btn" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="Load_btn" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Carregar Jogo"

[node name="Options_btn" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="Quit_btn" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="CSGBox3D" type="CSGBox3D" parent="."]
use_collision = true
size = Vector3(40, 1, 40)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(0.531818, 0, 0, 0, 1, 0, 0, 0, 0.927432, -0.0917404, 3.75601, 1.86568)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.916314, 0, -0.400461, 0, 1, 0, 0.400461, 0, 0.916314, -1.73164, 1.82674, 2.1042)
current = true

[node name="Player" parent="." instance=ExtResource("1_1rerr")]
transform = Transform3D(0.993961, 0, -0.109734, 0, 1, 0, 0.109734, 0, 0.993961, 0, 0.484487, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xhh6f")
}

[node name="walls" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.98568, -2.68301)
size = Vector3(5, 3, 0.2)

[node name="CSGBox3D2" type="CSGBox3D" parent="walls"]
transform = Transform3D(1, 0, 0, 0, 0.301169, 0, 0, 0, 1, -0.119294, 3.04293, 6.32993)
size = Vector3(5, 3, 0.2)

[node name="CSGBox3D5" type="CSGBox3D" parent="walls"]
transform = Transform3D(0.397305, 0, 0, 0, 0.768272, 0, 0, 0, 1, -1.67795, 1.52846, 6.32993)
size = Vector3(5, 3, 0.2)

[node name="CSGBox3D6" type="CSGBox3D" parent="walls"]
transform = Transform3D(0.421455, 0, 0, 0, 0.768272, 0, 0, 0, 1, 1.35538, 1.52846, 6.32993)
size = Vector3(5, 3, 0.2)

[node name="CSGBox3D3" type="CSGBox3D" parent="walls"]
transform = Transform3D(-0.0169289, 0, -0.999857, 0, 1, 0, 0.999857, 0, -0.0169289, -2.43349, 1.98568, 1.91183)
size = Vector3(9, 3, 0.2)

[node name="CSGBox3D4" type="CSGBox3D" parent="walls"]
transform = Transform3D(-0.0169289, 0, -0.999857, 0, 1, 0, 0.999857, 0, -0.0169289, 2.3247, 1.98568, 1.91183)
size = Vector3(9, 3, 0.2)

[node name="Interactables" type="Node3D" parent="."]

[node name="Door" parent="Interactables" instance=ExtResource("3_cayip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.177276, 1.55508, 6.32675)

[node name="Lights" type="Node3D" parent="."]

[node name="Flicker_light" parent="Lights" instance=ExtResource("4_158mb")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.80615, 0.347876)

[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Quit_btn" to="." method="_on_quit_btn_pressed"]

[editable path="Lights/Flicker_light"]
